--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,5 +1,9 @@
-body{
-    margin: 0;
-    background-color: red;
-    color: white;
+body {
+    margin: 0px;
+    background-color: #ab88ff;
+    font-family: "Muli", sans-serif;
+  }
+
+*{
+    box-sizing: border-box;
 }
