--- a/src/assets/styles/components/CarouselItem.scss
+++ b/src/assets/styles/components/CarouselItem.scss
@@ -4,7 +4,7 @@
   height: 250px;
   border-radius: 20px;
   overflow: hidden;
-  /* margin: 10px; */
+  margin: 0 5px 0 5px; 
   /* margin-right: 10px; */
   display: inline-block;
   cursor: pointer;
