--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,7 +1,10 @@
+@import "./Vars.scss";
+@import "./Media.scss";
+
 body {
     margin: 0px;
-    background-color: #ab88ff;
-    font-family: "Muli", sans-serif;
+    background-color: $main-color;
+    font-family: $theme-font;
   }
 
 *{
