--- a/src/assets/styles/components/Search.scss
+++ b/src/assets/styles/components/Search.scss
@@ -9,3 +9,33 @@
     font-size: 30px;
   }
   
+.input {
+background-color: transparent;
+border-left: 0;
+border-right: 0;
+border-top: 0;
+border-bottom: 2px solid white;
+font-family: "Muli", sans-serif;
+font-size: 16px;
+margin-bottom: 20px;
+padding: 0 20px;
+outline: none;
+height: 50px;
+}
+
+::placeholder {
+color: white;
+}
+
+.input_buscar {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 50px;
+  color: white;
+  font-family: "Muli", sans-serif;
+  font-size: 16px;
+  height: 50px;
+  padding: 0 20px;
+  width: 70%;
+  outline: none;
+}
